# medicine-vla-robot

./: .gitignore  AGENTS.md  README.md
config/: ur_pos.yaml
plugins/lerobot_robot_ur_medicine/: pyproject.toml
plugins/lerobot_robot_ur_medicine/lerobot_robot_ur_medicine/: __init__.py  config_ur_medicine.py  ur_medicine.py
plugins/lerobot_teleoperator_keyboard_ur/: pyproject.toml
plugins/lerobot_teleoperator_keyboard_ur/lerobot_teleoperator_keyboard_ur/: __init__.py  config_keyboard_ur.py  keyboard_ur.py
scripts/: record_with_keyboard.py  test_gripper_adapter.py  test_keyboard_teleop.py  test_lerobot_robot.py  test_robot_adapter.py
src/: __init__.py
src/gripper/: __init__.py  gripper_adapter.py
src/lerobot_processors/: __init__.py  ur_keyboard_processors.py
src/robot/: __init__.py  ur_adapter.py
src/task/: __init__.py  pick_place_pipeline.py
